<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS Blacklist</string>
    
    <string name="dialog_title_confirmClearAll">Clear all filters?</string>
    <string name="dialog_text_about" formatted="false">Created to aid in Geneva\'s battle against robot messages ♥\n\nPost all issues on Github and I\'ll fix them!\n\nhttps://github.com/tyrannosaur/SMSBlacklist</string>    
    
    <string name="main_list_empty">There are no filters</string>
    
    <string name="main_menu_add_entry">Add filter</string>
    <string name="main_menu_clear_all">Clear all</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_enabled">Blacklist enabled</string>
    <string name="main_menu_disabled">Blacklist disabled</string>
    <string name="main_context_menu_delete">Delete</string>
    
    <string name="label_filterPreview">Test a number</string>
    <string name="label_filterText">Filter</string>
    <string name="label_filterNote">Note</string>
    <string name="label_filterAffinity">Start matching from</string>
    
    <string name="label_filterPreviewStatus_match">This number is blacklisted!</string>
    <string name="label_filterPreviewStatus_no_match"></string>
    
    <string name="hint_filterPreview">test a number</string>
    <string name="hint_filterText">enter a full or partial number</string>
    <string name="hint_filterNote">a descriptive note</string>    
    
    <string name="label_addFilter">Add filter</string>
    <string name="label_addFilterDescription">Create a new filter</string>    
    
    <string name="notification_blacklistEnabled">Incoming SMSes are being filtered</string>
    <string name="toast_blacklistDisabled">Incoming SMSes are not being filtered</string>
    
    <string name="toast_filterAdded">Blacklist number saved</string>
    <string name="toast_filterInvalid">The requested number does not exist</string>
    
    <string name="affinity_left">start of number</string>
    <string name="affinity_right">end of number</string>
    <string name="affinity_exact">exact number</string>
    <string name="affinity_substr">anywhere in the number</string>
    <string name="affinity_regex">regular expression</string> 
</resources>