<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filterPreview"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/filterPreviewMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/btn_check_buttonless_on" android:visibility="invisible"/>

            <EditText
                android:id="@+id/filterPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="15dip"
                android:layout_toLeftOf="@id/filterPreviewMatch"
                android:gravity="center_vertical|center_horizontal"
                android:height="44dip"
                android:inputType="phone"
                android:padding="8dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="22dip" android:hint="@string/hint_filterPreview" android:background="@drawable/phone_background" android:freezesText="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filterText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/filterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:hint="@string/hint_filterText"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filterAffinity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/filterAffinity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filterNote"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/filterNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:hint="@string/hint_filterNote"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/addFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:drawableLeft="@drawable/ic_menu_add"
            android:enabled="false"
            android:text="@string/label_addFilter" />
    </LinearLayout>

</ScrollView>